# co-guard

./: .env  README.md  docker-compose.neo4j.yml  environment.yml  main.py  pyproject.toml  requirements-local-runtime.txt  方法设计.md
chapters/: 00-abstract.md  01-introduction.md  02-related-methods.md  03-system-design.md  04-experiments.md  05-limitations-outlook.md  appendices-abc.md  conclusion.md  references.md  thesis_final_text.txt
coguard/: __init__.py  cli.py  config.py  models.py  pipeline.py
coguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
coguard/agents/: __init__.py  runtime.py
coguard/decompose/: __init__.py  batch_decompose.py  decompose.py
coguard/evaluation/: README.md  __init__.py  benchmark.py  cli.py  concat_baseline.py  concat_baseline_cli.py  metrics.py  plots.py  runner.py  scenario1.py  scenario1_cli.py  scenario2_cli.py  scenario3.py  scenario3_cli.py  sequential.py  sequential_cli.py
coguard/graph/: README.md  __init__.py  entity_similarity.py  store.py
coguard/reasoning/: README.md  __init__.py  agents.py  reasoner.py
coguard/semantic/: README.md  __init__.py  agents.py  embedding.py  llm.py  parser.py  prompts.py  retriever.py  schema.py  vectorizer.py
data/: advbench_decomposed.jsonl  benign_behaviors.csv
outputs/scenario1/20260410-151254/: results.json  (+4 more)
plan/: notes.md  outline.md  progress.md  project-overview.md
scripts/: plot_strategy_metrics_no_fallback.py  run_all_final_evaluations.py  run_scenario1_evaluation.py  run_security_evaluation.py  run_sequential_security_evaluation.py  start_vllm_server.sh
tests/: test_decompose.py  test_evaluation.py  test_pipeline.py
(+141 files in other folders)
