[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coguard"
version = "0.1.0"
description = "Prototype guardrail pipeline for multi-agent malicious intent detection."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
neo4j = ["neo4j>=5.20"]
retriever = ["sentence-transformers>=3.0"]

[project.scripts]
coguard = "coguard.cli:main"
coguard-eval = "coguard.evaluation.cli:main"

[tool.setuptools]
packages = ["coguard", "coguard.semantic", "coguard.graph", "coguard.reasoning", "coguard.evaluation"]
